<resources>
    <string name="app_name">NUMAD17F-NayHtet</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_about">About</string>
    <string name="button_dictionary">Dictionary</string>

    <string name="button_scroggle">Scroggle</string>
    <string name="button_new_game">New Game</string>
    <string name="button_continue">Continue</string>
    <string name="button_word_game">Word Game</string>
    <string name="button_confirm">Confirm</string>
    <string name="label_restart">Restart</string>
    <string name="label_main_menu">Main Menu</string>
    <string name="declare_winner">%1$s is the winner</string>
    <string name="label_ok">OK</string>
    <string name="times_up">Time\'s Up!</string>
    <string name="label_leaderboard">Leaderboard</string>
    <string name="label_scoreboard">Scoreboard</string>
    <string name="label_username">Username</string>
    <string name="label_score">Score:</string>
    <string name="label_bestWord">Best Word</string>
    <string name="label_time">Date/Time</string>
    <string name="button_submit">Submit</string>
    <string name="button_login">Login</string>
    <string name="button_cancel">Cancel</string>
    <string name="label_no">No</string>
    <string name="label_yes">Yes</string>

    <string name="title_dictionary">Test Dictionary</string>
    <string name="edit_dictionary">Find a word</string>
    <string name="button_clear">Clear</string>
    <string name="button_acknowledgments">Acknowledgments</string>
    <string name="title_acknowledgments">Acknowledgments</string>
    <string name="text_author">Nay Htet</string>
    <string name="text_email">htet.na@husky.neu.edu</string>
    <string name="text_year">First Year</string>
    <string name="button_error">Generate Error</string>
    <string name="text_program">MSCS </string>
    <string name="text_versionCode">Version Code</string>
    <string name="text_versionName">Version Name</string>
    <string name="text_IMEI">IMEI</string>
    <string name="text_coming_soon">Coming Soon</string>
</resources>
