<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.neu.madcourse.nayhtet.About">

    <TextView
        android:id="@+id/aboutTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/text_author"
        android:text="@string/text_author"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/aboutTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/text_email"
        android:text="@string/text_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutTextView1" />

    <TextView
        android:id="@+id/aboutTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/text_year"
        android:text="@string/text_year"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutTextView2" />

    <ImageView
        android:id="@+id/aboutImageView1"
        android:layout_width="188dp"
        android:layout_height="235dp"
        android:adjustViewBounds="false"
        android:contentDescription="@drawable/headshot"
        app:srcCompat="@drawable/headshot"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        tools:layout_editor_absoluteY="-14dp"
        tools:layout_editor_absoluteX="479dp" />

    <TextView
        android:id="@+id/aboutTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/text_IMEI"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/aboutTextView5" />

    <TextView
        android:id="@+id/aboutTextView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/text_program"
        android:text="@string/text_program"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutTextView3" />
</android.support.constraint.ConstraintLayout>
