<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context="edu.neu.madcourse.nayhtet.GameActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="346dp"
        android:layout_height="438dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="@color/menuFragment_color"
        android:elevation="@dimen/elevation_high"
        android:orientation="vertical"
        android:padding="@dimen/menu_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/submitScore_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/menu_space"
            android:text="Submit your score"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/scroggle_color"
            android:textSize="@dimen/menu_text_size" />

        <EditText
            android:id="@+id/username_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/label_username"
            android:inputType="textPersonName"
            android:selectAllOnFocus="false" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:text="@string/button_submit" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:text="@string/button_cancel" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>