<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/row_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/label_username" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/label_score" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/label_bestWord" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/label_time" />

        </TableRow>

        <TableRow
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/row1_username"
                android:layout_width="80dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row1_score"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row1_bestWord"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row1_time"
                android:layout_width="90dp"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/row2_username"
                android:layout_width="80dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row2_score"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row2_bestWord"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row2_time"
                android:layout_width="90dp"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/row3_username"
                android:layout_width="80dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row3_score"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row3_bestWord"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row3_time"
                android:layout_width="90dp"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/row4_username"
                android:layout_width="80dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row4_score"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row4_bestWord"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row4_time"
                android:layout_width="90dp"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/row5"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/row5_username"
                android:layout_width="80dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row5_score"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row5_bestWord"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row5_time"
                android:layout_width="90dp"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/row6"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/row6_username"
                android:layout_width="80dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row6_score"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row6_bestWord"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row6_time"
                android:layout_width="90dp"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/row7"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/row7_username"
                android:layout_width="80dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row7_score"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row7_bestWord"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row7_time"
                android:layout_width="90dp"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/row8"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/row8_username"
                android:layout_width="80dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row8_score"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row8_bestWord"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row8_time"
                android:layout_width="90dp"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/row9"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/row9_username"
                android:layout_width="80dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row9_score"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row9_bestWord"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row9_time"
                android:layout_width="90dp"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/row10"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/row10_username"
                android:layout_width="80dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row10_score"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row10_bestWord"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/row10_time"
                android:layout_width="90dp"
                android:layout_height="wrap_content" />

        </TableRow>

    </TableLayout>
</android.support.constraint.ConstraintLayout>